--- a/html_css/Ejercicio21/styleResponsive.css
+++ b/html_css/Ejercicio21/styleResponsive.css
@@ -6,7 +6,7 @@
 
 header {
     width: 100%;
-    height: 15vh;
+    height: 12vh;
 }
 
 /* Barra de navegación */
@@ -28,7 +28,6 @@ header {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    text-align: center;
 }
 
 #boton-nav {
@@ -66,19 +65,11 @@ li {
 
 /* Imagenes navegación */
 .logo_gato {
-    border-radius: 60%;
+    border-radius: 50%;
     background-color: white;
     box-shadow: 5px 5px 10px white, -5px 5px 10px white, 5px -5px 10px white, -5px -5px 10px white;
     width: 50px;
     height: 50px;
-}
-
-#logo-gato{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .lupa {
@@ -95,34 +86,27 @@ li {
     display: none;
 }
 
-/* contenido principal */
+/* contenido principal--------------------------------------- */
 main {
-    /* background-color: rgba(47, 47, 126, 0.726); */
     width: 100vw;
-    height: 70vh;
+    height: 55vh;
     display: flex;
     justify-content: center;
     align-items: center;
     background: linear-gradient(56deg, rgb(195, 0, 255) 0%, rgb(87, 0, 128) 48%, rgb(195, 0, 255)100%);
 }
 
-/* .cuadro-fondo{
-    width: 50%;
-    height: 60%;
-    background-image: url(gato.png);
-    background-size:contain ;
-    background-repeat: no-repeat;
-    margin-right: -25%;
-} */
 
 .cuadro-fondo {
     background-image: url(gato.png);
     background-position: center;
-    background-size: 60%;
+    background-size: 70%;
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
-    width: 100vw;
+    background-position-x: 30%;
+    background-position-y: 12vh;
+    width: 100%;
     height: 100%;
     z-index: 2;
     display: flex;
@@ -144,39 +128,38 @@ main {
     justify-content: center;
     width: 50vw;
     height: 10vmax;
-    margin-left: 20%;
     font-size: 1.5vw;
     z-index: 2;
-    /* text-size-adjust: none; */
+    margin-left: 20%;
 }
 
 .texto-principal h2,
 p {
     color: white;
-    width: 100%;
-    height: 100px;
 }
 
+.texto-principal p{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
 
 .planes {
-    margin-top: 30px;
     display: flex;
     flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
-    height: 5vmax;
-    font-size: 1vmax;
 }
 
 #plan1,
 #plan2 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: 900;
     background-color: black;
     color: white;
     border-style: none;
-    width: 30vmax;
-    height: 5vmax;
-    font-size: 2em;
+    width: 100%;
+    height: 200%;
+    font-size: 100%;
 }
 
 #plan2 {
@@ -186,21 +169,21 @@ p {
     border-color: white;
 }
 
-/* principal */
+/* principal------------------------------------------------------------------- */
 #contenido {
-    height: 15vh;
+    height: 33vh;
     background: black;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
+    align-items: flex-end;
+    justify-content: flex-start;
 }
 
 .lenguaje {
     margin: 10px;
     background: rgb(84, 84, 84);
-    width: 100%;
-    height: 85%;
+    width: 27%;
+    height: 11vw;
     display: flex;
     flex-direction: row-reverse;
     align-items: flex-start;
@@ -221,43 +204,38 @@ p {
     width: 8vw;
 }
 
-#trending {
-    background-color: black;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-
 .texto-cursos {
     color: white;
-    font-size: 90%;
+    font-size: 2vw;
     margin-left: 15px;
+    margin-bottom: 2%;
 }
 
-.texto-cursos2{
-    color: white;
-    font-size: 1vw;
-    margin-left: 1vw;
-}
 
 .no-cursos {
-    font-family: Helvetica, sans-serif;
     color: rgb(255, 255, 255);
     margin-left: 15px;
-    font-size: 80%;
+    font-size: 1.5vw;
+    font-weight: 400;
+}
+
+.negrita{
+    font-size: 1.5vw;
 }
 
 .morado {
+    margin-top: 5%;
     margin-left: 15px;
     color: rgb(206, 163, 247);
-    font-weight: 300;
+    font-weight: 400;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: rgb(194, 117, 239);
+    font-size: 1vw;
 }
 
-.texto-cursos3{
-    display: none;
+#look, #look2{
+    margin-top: 20%;
+    font-size: 1.5vw;
 }
 
 .simbolo {
@@ -267,6 +245,30 @@ p {
     -webkit-text-stroke-color: rgb(180, 111, 220);
 }
 
+#trending {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 15%;
+}
+
+#tech{
+    color: rgb(206, 163, 247);
+    margin-left: 1%;
+    font-size: 10px;
+}
+
+.texto-cursos2{
+    color: white;
+    font-size: 2vw;
+    margin-left: 5%;
+}
+
+.topics{
+    display: none;
+}
 
 /* Pantallas pequeñas */
 @media screen and (max-width: 767px) {
@@ -276,13 +278,12 @@ p {
     #boton-nav,
     #resources,
     #sign,
-    #try,
-    .texto-cursos3 {
+    #try {
         display: none;
     }
 
     header {
-        height: 15vh;
+        height: 11vh;
         width: 100vw;
     }
 
@@ -297,8 +298,9 @@ p {
     }
 
     .logo_gato{
-        width: 10vw;
-        height: 10vw;
+        vertical-align: middle;
+        width: 5vw;
+        height: 5vw;
     }
 
     #plural{
@@ -306,6 +308,8 @@ p {
         text-align: center;
     }
 
+
+/* cuador principal--------------------- */
     main {
         height: 70vh;
         width: 100vw;
@@ -314,10 +318,9 @@ p {
     .cuadro-fondo {
         background-image: url(gato.png);
         background-position: left;
-        background-position-x: 40px;
-        background-position-y: 150px;
+        background-position-x: 140px;
+        background-position-y: 100px;
         background-size: 300%;
-        /* background-attachment: fixed; */
         background-repeat: no-repeat;
         position: relative;
         width: 100vw;
@@ -328,28 +331,33 @@ p {
         background: linear-gradient(65deg, rgba(78, 0, 63, 0.5) 0%, rgba(69, 21, 103, 0.5) 48%, rgba(81, 0, 64, 0.3) 100%);
     }
 
+
+    .titulo{
+        font-size: 40px;
+    }
+
     .texto-principal {
-        margin-top: -3vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 60vw;
-        height: 20vh;
-        margin-left: -27%;
-        font-size: 2vh;
-        z-index: 2;
+        width: 75%;
+        height: 85%;
+        font-size: 19px;
+        margin-left: -10%;
     }
 
     .planes {
-        margin-top: 15vh;
         display: flex;
         flex-direction: column;
-        margin: none;
+        width: 100%;
+        height: 100%;
     }
 
     #plan1, #plan2{
-        width: 215px;
-        height: 300px;
+        width: 90%;
+        height: 50%;
+        font-size: 90%;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     #plan2 {
@@ -358,9 +366,10 @@ p {
     }
 
 
+
     /* Lenguajes ---------------------------------------*/
     #contenido {
-        height: 15vh;
+        height: 19vh;
         width: 100vw;
     }
 
@@ -383,7 +392,7 @@ p {
 
     .texto-cursos2{
         color: white;
-        font-size: 12px;
+        font-size: 10px;
         margin-left: 1vw;
     }
 
@@ -400,7 +409,7 @@ p {
         font-family: Helvetica, sans-serif;
         color: rgb(255, 255, 255);
         margin-left: 1vw;
-        font-size: 11px;
+        font-size: 3.5vw;
     }
 
     .morado {
@@ -412,6 +421,10 @@ p {
     }
 
     .simbolo {
+        display: none;
+    }
+
+    .lenguaje, #trending{
         display: none;
     }
 }
@@ -433,36 +446,31 @@ p {
         width: 100vw;
     }
 
-    #nav2{
-        margin-right: 5%;
+    .lupa{
+        width: 10%;
+        height: 10%;
+        padding-left: 250px;
     }
 
     .menu{
+        margin-top: -9px;
         display: inline;
         width: 150%;
         height: 150%;
-        font-size: 250%;
+        font-size: 40px;
         color: white;
         background-color: black;
         border-style: none;
-        margin-top: -10px;
     }
-
-    .lupa{
-        width: 100%;
-        height: 100%;
-        text-align: center;
-        vertical-align: middle;
-    }
-
-    .li-lupa{
-        width: 3vw;
-    }
-
     .logo_gato{
         vertical-align: middle;
-        width: 70px;
-        height: 70px;
+        width: 7vw;
+        height: 7vw;
+    }
+
+    #plural{
+        padding-left: 3vw;
+        text-align: center;
     }
 
     main {
@@ -471,60 +479,53 @@ p {
     }
 
     .cuadro-fondo {
-        background-position-x: -100px;
-        background-position-y: 80px;
-        background-size: 150%;
-        background-repeat: no-repeat;
+        background-position-x: -250px;
+        background-position-y: 60px;
+        background-size: 200%;
+    }
+
+    .transparente {
+        background: linear-gradient(65deg, rgba(78, 0, 63, 0.5) 0%, rgba(69, 21, 103, 0.5) 48%, rgba(81, 0, 64, 0.3) 100%);
     }
 
     .texto-principal {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        font-size: 2vh;
-        z-index: 2;
-    }
-
-    .planes {
-        margin-top: 10vh;
- 
-    }
-
-    /* Lenguajes ---------------------------------------*/
-    .lenguaje {
-        display: none;
-    }
-
-    #contenido{
-        display: flex;
-        justify-content: flex-start;
-    }
-
-    #trending {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        width: 40vw;
-    }
-
-    .morado {
-        margin-left: 1vw;
-        color: rgb(206, 163, 247);
-        -webkit-text-stroke-width: 0px;
-        -webkit-text-stroke-color: rgb(83, 6, 147);
-        font-size: 15px;
-    }
-
-    .texto-cursos3{
-        display: flex;
-        color: white;
-        width: 90vw;
+        width: 70%;
         height: 100%;
         font-size: 20px;
+        margin-left: 120px;
     }
 
-    .simbolo, .texto-cursos2 {
+
+    /* Lenguajes ---------------------------------------*/
+    #contenido {
+        height:30vh;
+        width: 100vw;
+    }
+
+    .lenguaje, #trending{
         display: none;
+    }
+
+    .simbolo {
+        display: none;
+    }
+
+    .topics{
+        display: block;
+        width: 90%;
+        height: 80%;
+    }
+
+    .texto-cursos{
+        margin-top: 2%;
+        margin-bottom: 2%;
+        font-size: 200%;
+        color: white;
+    }    
+
+    .que-aprender{
+        color: white;
+        margin-left: 2%;
+        font-weight: 300;
     }
 }
