--- a/html_css/Ejercicio22/style.css
+++ b/html_css/Ejercicio22/style.css
@@ -11,7 +11,7 @@ header {
 #virus {
     width: 100vw;
     height: 3vh;
-    font-size: 60%;
+    font-size: clamp(1vh, 1vw, 7px);
     text-align: center;
     text-decoration: underline;
     background-color: rgb(222, 213, 250);
@@ -26,8 +26,8 @@ header {
 }
 
 #logo {
-    width: 25px;
-    height: 25px;
+    width: max(6px, 1.8vw, 10px);
+    height: max(6px, 1.8vw, 10px);
 }
 
 
@@ -44,7 +44,7 @@ header {
 .lista-nav1 {
     color: rgb(89, 0, 214);
     font-family: sans-serif, Helvetica;
-    font-size: larger;
+    font-size: clamp(10px, 2vw, 30px);
 }
 
 .lista-nav2 {
@@ -72,6 +72,7 @@ header {
     align-items: center;
     justify-content: center;
 }
+
 
 .sesion {
     font-size: 1vw;
@@ -107,6 +108,38 @@ li {
     font-size: 1.5vw;
 }
 
+.li-nav:hover{
+    color: rgb(123, 47, 228);
+    border-bottom-style: groove;
+    border-bottom-width: 2px;
+    border-color: rgb(123, 47, 228);
+}
+
+.gestion{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    width: 73%;
+    height: 10px;
+}
+
+.fondo-blanco{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    background-color: white;
+    width: 30%;
+    height: 130px;
+    border-radius: 10px;
+    padding: 1%;
+    padding-left: 2%;
+    padding-right: 2%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.322);
+    z-index: 1;
+}
+
+
+
 #reservaciones {
     width: 100vw;
     height: 45vh;
@@ -128,6 +161,8 @@ li {
 /* Principal-------------------------------------------- */
 .margen{
     margin: 10px;
+    width: 100%;
+    height: 100%;
 }
 
 main {
@@ -178,10 +213,10 @@ main {
 }
 
 .inputs{
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
     width:95%;
     height: 3vw;
@@ -223,9 +258,9 @@ i{
 }
 
 .formulario-buscar p{
-    background-color: orange;
+    background-color: rgb(255, 81, 0);
     border-radius: 24px;
-    width: 50%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -235,6 +270,7 @@ i{
 
 #lupa{
     color: white;
+    margin-right: -5%;
 }
 
 .texto{
@@ -247,6 +283,7 @@ i{
 input{
     vertical-align: middle;
 }
+
 
 /* footer------------------------------------------------------------- */
 .sugerencias {
