--- a/html_css/Ejercicio24/style.css
+++ b/html_css/Ejercicio24/style.css
@@ -11,24 +11,55 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgb(65,1,117);
+background: linear-gradient(180deg, rgb(45, 1, 82) 0%, rgb(6, 46, 53) 48%, rgb(27, 3, 48) 100%);
 }
 
-#front{
+#carta{
     height: 40vw;
     width: 40vw;
-    background-color: rgb(17, 0, 252);
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    gap: 4%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
 }
 
-.columna{
-    width: 99%;
-    height: 100%;
-    background-color: antiquewhite;
-}
-
-/* .fila{
+.fila{
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 255, 106);
+    background: linear-gradient(90deg, rgba(0, 225, 255, 0.342) 0%, rgba(0, 255, 221, 0.356) 48%, rgb(0, 225, 255, 0.342) 100%);
+    border-color: #55fff7;
+    border-style: groove;
+    transition: all 0.8s;
+    transform-style: preserve-3d;
+}
+
+.fila:hover{
+    transform: rotateY(180deg);
+}
+
+.front, .back{
+    position: absolute;
+    backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+/* Parte delantera---------------------------------------------- */
+/* .front{
+    
 } */
+
+
+/* Parte trasera------------------------------------------------ */
+.back{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    transform: rotateY(180deg);
+}
+
+img{
+    width: 100%;
+}
