--- a/html_css/Ejercicio25/style.css
+++ b/html_css/Ejercicio25/style.css
@@ -90,7 +90,7 @@ header{
 /* Contenido principal------------------------------------ */
 .contenido{
     width: 100vw;
-    height: 75%;
+    height: 75vh;
     display: flex;
     flex-direction: row;
 }
@@ -108,12 +108,11 @@ aside{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-}
+    align-items: center;}
 
 .rotacion{
-    width: 50%;
-    height: 54.4%;
+    width: 20vw;
+    height: 20vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -148,6 +147,7 @@ aside{
     height: 1vw;
     border-color: white;
     border-style: solid;
+    border-width: 2px;
     border-radius: 50%;
 }
 
@@ -159,7 +159,7 @@ aside{
 
 #circulo1{
     margin-bottom: 15%;
-    margin-right: -15%;
+    margin-right: -15.5%;
     
 }
 
@@ -170,7 +170,7 @@ aside{
 
 #circulo3{
     margin-bottom: 15%;
-    margin-left: -15%;
+    margin-left: -15.5%;
 }
 
 .linea2{
